--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <button class="btn" id="nextBtn" onclick="nextQuestion()" disabled style="display: none;">Câu Tiếp Theo</button>
         <button class="btn" onclick="restartQuiz()" style="background-color: #6c757d;">Bắt Đầu Lại</button>
         <button class="btn" onclick="exportToTxt()" style="background-color: #28a745;">Xuất File Tài liệu :))</button>
+        <a href="https://itexamanswers.net/ccna-2-v7-modules-7-9-available-and-reliable-networks-exam-answers.html" target="_blank" class="btn">Nguồn dữ liệu từ : itexamanswers</a>
     </div>
 </div>
 
